--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,15 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
+                Sean Yuan<br />
                 What You Are<br />
-                you@example.com
+                coding4x@gmail.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/seanyuan">github.com/seanyuan</a><br />
+                <a href="https://twitter.com/xinyuan">twitter.com/seanyuan</a><br />
               </p>
             </div>
           </div>
