--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,44 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+{% include head.html %}
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
-
-    </head>
-    <body>
-
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
-
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Sean Yuan<br />
-                What You Are<br />
-                coding4x@gmail.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/seanyuan">github.com/seanyuan</a><br />
-                <a href="https://twitter.com/xinyuan">twitter.com/seanyuan</a><br />
-              </p>
-            </div>
-          </div>
+<body>
+        <div class="container">
+                <div class="left-col">
+                        <div class="intrude-less">
+                                <header id="header" class="inner">{% include header.html %}</header>                                
+                        </div>
+                </div>
+                <div class="mid-col">
+                        <div class="mid-col-container">
+                                <div id="content" class="inner">{{ content }}</div>
+                        </div>
+                        <footer id="footer" class="inner">{% include footer.html %}</footer>
+                </div>
         </div>
 
-    </body>
+
+<script>
+   
+        
+</script>
+</body>
 </html>
